<resources>
    <string name="app_name">TicTacToe Yogev\'s Guy\'s Game</string>
    <string name="playerXTurn">Player X\'s turn</string>
    <string name="reset">RESET</string>
    <string name="ImgViwDesc">TicTacToe Yogev\'s Guy\'s Game</string>
    <string name="splash_img">splash img</string>
    <string name="start_game">Start Game</string>
    <string name="r3c1">3rd row, 1st column of game table layout</string>
    <string name="r3c2">3rd row, 2nd column of game table layout</string>
    <string name="r3c3">3rd row, 3rd column of game table layout</string>
</resources>