<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LinrLayoutImg_margin_top"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_11"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/boxempty" />

        <ImageButton
            android:id="@+id/btn_12"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/boxempty" />

        <ImageButton
            android:id="@+id/btn_13"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/boxempty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_21"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/boxempty" />

        <ImageButton
            android:id="@+id/btn_22"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/boxempty" />

        <ImageButton
            android:id="@+id/btn_23"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/boxempty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_31"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:contentDescription="@string/r3c1"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/boxempty" />

        <ImageButton
            android:id="@+id/btn_32"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:contentDescription="@string/r3c2"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/boxempty" />

        <ImageButton
            android:id="@+id/btn_33"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:contentDescription="@string/r3c3"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/boxempty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LinrLayoutRst_marginTop"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/RstBtn_marginLtRt"
            android:layout_marginRight="@dimen/RstBtn_marginLtRt"
            android:layout_weight="1"
            android:textColor="@color/purple"
            android:text="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    </LinearLayout>

    <TextView
<<<<<<< HEAD
        android:id="@+id/msgtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/msgText_marginTop"
        android:fontFamily="monospace"
        android:text="@string/playerXTurn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />
=======
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Games Score History by Fastes Winner:"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewWinnersHistory"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:textStyle="bold" />

>>>>>>> ec5fd26 (X O)
</LinearLayout>
